<resources>
    <string name="app_name">Fitness</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_posture">Posture</string>
    <string name="nav_weight_tracking">Weight Tracking</string>
    <string name="nav_weight_lifting">Weight Lifting</string>
    <string name="nav_sleep">Sleep</string>
    <string name="nav_medals">Medals</string>

    <string name="action_settings">Settings</string>

    <string name="last_workout">Last Workout</string>
    <string name="prefence_weight_file">weights</string>
    <string name="add_weight_title">Add Weight</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
