<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_dashboard"/>
        <item
            android:id="@+id/nav_posture"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_posture"/>
        <item
            android:id="@+id/nav_weight_tracking"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_weight_tracking"/>
        <item
            android:id="@+id/nav_weight_lifting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_weight_lifting"/>
        <item
            android:id="@+id/nav_sleep"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_sleep"/>
        <item
            android:id="@+id/nav_medals"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_medals"/>
    </group>

</menu>
